Correct aling; -> align:
Made in newyear/static/newyear/styles.css

--- a/lecture3/newyear/static/newyear/styles.css
+++ b/lecture3/newyear/static/newyear/styles.css
@@ -1,5 +1,5 @@
 h1 {
     font-family: sans-serif;
-    font-size; 90px;
-    text-aling: center;
+    font-size: 90px;
+    text-align: center;
 }
